@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-08-11T00:42:52Z",
+  "timestamp" : "2022-08-11T08:10:04Z",
   "count_outdated" : 1798,
   "uniques_outdated" : 123,
-  "count" : 1871,
+  "count" : 1870,
   "uniques" : 131,
   "views" : [
     {
       "timestamp": "2022-07-28T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
