@@ -1,10 +1,10 @@
 {
-  "count": 73,
+  "count": 72,
   "uniques": 2,
   "views": [
     {
       "timestamp": "2022-07-28T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
