@@ -1,3 +1,10 @@
+2022-08-11T08:10:04Z:
+* notice: last 14d: unq all: 2 72
+* notice: prev accum: outdated-unq outdated-all / unq all: 123 1798 / 131 1871
+* notice: next accum: outdated-unq outdated-all / unq all: 123 1798 / 131 1870
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-07-28]
+
 2022-08-11T00:42:52Z:
 * notice: last 14d: unq all: 2 73
 * notice: prev accum: outdated-unq outdated-all / unq all: 123 1798 / 131 1870
